add facebook crawl data

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: classpath:/db/changelog/2025/06/19-01-changelog.json
       relativeToChangelogFile: false
+  - include:
+      file: classpath:/db/changelog/2025/06/20-01-changelog.json
+      relativeToChangelogFile: false
